tests/baselines/reference/accessorWithoutBody1.errors.txt
accessorWithoutBody1.ts(1,19): error TS1005: '{' expected.


==== accessorWithoutBody1.ts (1 errors) ====
    var v = { get foo() }
                      ~
!!! error TS1005: '{' expected.